--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -697,7 +697,29 @@ textInput("plot_ext",
 ## hr()
 ```
 </div> <!-- Control Bar -->
-</div> <!-- Viewer Panel -->
+
+```{r,echo=F}
+plotOutput("plot_eic_ms1",
+           hover = hoverOpts(id="plot_hover",
+                             delayType = "throttle",
+                             delay=100),
+           dblclick = "plot_rt_click",
+           brush = "plot_brush")
+plotOutput("plot_eic_ms2",
+           hover = hoverOpts(id="plot_hover",
+                             delayType = "throttle",
+                             delay=100),
+           dblclick = "plot_rt_click",
+           brush = "plot_brush")
+plotOutput("plot_spec_ms2",
+           hover = hoverOpts(id="plot_hover",
+                             delayType = "throttle",
+                             delay=100),
+           dblclick = "plot_mz_click",
+           brush = brushOpts(id="plot_mz_brush"))
+
+```
+</div> <!-- Viewer Panel
 
 </div> <!-- Main -->
 
