--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -666,6 +666,8 @@ DT::DTOutput("cindex")
 <div style="display: flex-flow: column nowrap">
 ### Viewer
 
+<div style="display: flex; flex-direction: row; flex-wrap: nowrap;">
+<div style="width: 70%;"> <!-- EIC ID Plot -->
 ```{r,echo=F}
 ## plotOutput("plot_eic_ms1",
 ##            hover = hoverOpts(id="plot_hover",
@@ -693,14 +695,22 @@ plotOutput("plot_eic_combined",
            dblclick = "plot_rt_click",
            brush = "plot_brush")
 
+```
+</div> <!-- EIC ID Plot -->
+<div style="width: 30%;">  <!-- Structure -->
+```{r, echo=F}
+plotOutput("plot_struct")
+```
+</div>
+</div>
+```{r, echo=F}
+
 plotOutput("plot_spec_ms2",
            hover = hoverOpts(id="plot_hover",
                              delayType = "throttle",
                              delay=100),
            dblclick = "plot_mz_click",
            brush = brushOpts(id="plot_mz_brush"))
-
-
 ```
 
 <div style="display: flex-flow: row nowrap"> <!-- Control Bar -->
