--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -692,6 +692,26 @@ numericInput(inputId = "plot_rt_max",
 
 ```
 </div> <!-- RT div -->
+
+#### Intensity Range (MS1)
+
+<div style="display:flex; flex-direction: row;"> <!-- Intensity div -->
+```{r, echo=F}
+numericInput(inputId = "plot_i_min",
+             label="Start",
+             value=NA_real_,
+             width="15%")
+```
+```{r, echo=F}
+numericInput(inputId = "plot_i_max",
+             label="End",
+             value=NA_real_,
+             width="15%")
+
+
+```
+</div> <!-- Intensity div -->
+
 </div>
 <div>
 ```{r, echo=F}
