--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -612,7 +612,9 @@ DT::dataTableOutput("setid_table")
 
 <div style="display: flex; flex-flow: column nowrap;">
 <div style="display: flex; flex-flow: column; padding-right:1.0em">
+
 ### Compound Index
+
 ```{r, echo=F}
 selectInput("cindex_group",label="Group",
             choices=c(NA_character_,
@@ -640,6 +642,7 @@ DT::DTOutput("cindex")
 </div> <!-- Compound Explorer Panel -->
 
 ### Viewer
+
 <div class="plot-layout"> <!-- Plot Section -->
 <div> 
 ```{r, echo=F}
@@ -751,86 +754,60 @@ plotOutput("plot_spec_ms2",
 </div> <!-- Plots -->
 
 
+### Measurement Properties
+
+<div class="measure-prop-sec">
+
+<div class="sel-spec"> <!-- sel-spec -->
+
+#### Select Spectrum
+
+```{r, echo=F}
+selectInput("sel_parent_trace",label="Select parent", choices=character(),size=10L,selectize=F)
+```
+
+```{r, echo=F}
+selectInput("sel_spec",label="Select spectrum", choices=character(),size=10L,selectize=F)
+```
+
+</div> <!-- sel-spec -->
+
+<div class="measure-props"> <!-- measure-props -->
+
+#### Measurement Properties
+
+```{r,echo=F}
+numericInput(inputId="chq_ms1_rt",
+             label="Retention time (MS1)",
+             value=NA_real_)
+numericInput(inputId="chq_ms1_int",
+             label="Intensity (MS1)",
+             value=NA_real_)
+```
+
+```{r,echo=F}
+checkboxGroupInput(inputId="qabox",
+                   label="Quality Control",
+                   choices=QABOX_VALS)
+```
 
 
-<!-- <div style="display: flex-flow: column nowrap"> <\!-- Main -\-> -->
-<!-- <div style="display: flex; flex-direction: row; flex-wrap: nowrap;"> <\!-- EICs and Structure -\-> -->
-<!-- <div style="width: 80%; overflow-y: scroll;"> <\!-- EIC ID Plot -\-> -->
-<!-- ```{r,echo=F} -->
-<!-- plotOutput("plot_eic_combined", -->
-<!--            ## height="100%", -->
-<!--            hover = hoverOpts(id="plot_hover", -->
-<!--                              delayType = "throttle", -->
-<!--                              delay=100), -->
-<!--            dblclick = "plot_rt_click", -->
-<!--            brush = "plot_brush") -->
+</div> <!-- measure-props -->
 
-<!-- ``` -->
-<!-- </div> <\!-- EIC ID Plot -\-> -->
-<!-- <div style="display: flex; flex-direction: column; width=20%;">  <\!-- Structure and Dynamic Plot Data -\-> -->
+<div class="spec-tab"> <!-- spec tab -->
 
-<!-- ```{r, echo=F} -->
-<!-- plotOutput("plot_struct", width="400%") -->
-<!-- ``` -->
+#### Mass Spectrum
+
+```{r, echo=F}
+verbatimTextOutput("print_spec_tab")
+```
+
+</div> <!-- spec tab -->
+
+</div> <!-- measure-prop-sec -->
 
 
 
-<!-- </div>  <\!-- Structure and Dynamic Plot Data -\-> -->
-
-<!-- </div>  <\!-- EICs and Structure -\-> -->
-
-<!-- <div style="display: flex; flex-direction: row; flex-wrap: nowrap;"> <\!-- Spec and Details-\-> -->
-
-<!-- <div style="display: flex; flex-direction: row; flex-wrap: nowrap; padding-top: 2em; padding-left: 2em;">  <\!-- Modification -\-> -->
-<!-- <div> <\!-- Select MS1 curve -\-> -->
-<!-- ```{r,echo=F} -->
-<!-- selectInput(inputId="sel_ms1_curve",label="Select MS1 curve",choices=NULL) -->
-<!-- numericInput(inputId="mod_ms1_rt",label="MS1 peak retention time (min)",value=NA_real_) -->
-<!-- numericInput(inputId="mod_ms1_int", label="MS1 peak intensity", value=NA_real_) -->
-<!-- checkboxGroupInput(inputId="mod_ms1_qa", label="MS1 Quality") -->
-<!-- ``` -->
-<!-- </div> <\!-- Select MS1 curve -\-> -->
-<!-- <div> <\!-- Select MS2 entry -\-> -->
-<!-- ```{r,echo=F} -->
-<!-- selectInput(inputId="sel_ms2_entry",label="Select MS2 spectrum",choices=NULL) -->
-<!-- checkboxGroupInput(inputId="mod_ms2_qa", label="MS2 Quality") -->
-<!-- actionButton(inputId="change_qa_b",label="Commit changes") -->
-<!-- ``` -->
-<!-- </div> <\!-- Select MS2 entry -\-> -->
-<!-- </div> <\!-- Modification -\-> -->
-<!-- </div> <\!-- Spec and Details-\-> -->
-
-<!-- <div style="display: flex-flow: row nowrap"> <\!-- Control Bar -\-> -->
-<!-- ```{r, echo=F} -->
-<!-- actionButton("plot_save_single", -->
-<!--              label="Save this plot") -->
-<!-- actionButton("plot_save_all", -->
-<!--              label="Save all plots") -->
-<!-- actionButton("make_report_b", -->
-<!--              label="Create report") -->
-<!-- textInput("plot_ext", -->
-<!--           label = "Plot extension", -->
-<!--           value = "pdf") -->
-<!-- ## shinyscreen::rt_input(input_rt = "plot_rt_min", -->
-<!-- ##                       input_unit = "plot_rt_min_unit", -->
-<!-- ##                       width=15, -->
-<!-- ##                       width_u=10, -->
-<!-- ##                       def_rt = "min", -->
-<!-- ##                       def_unit = "min", -->
-<!-- ##                       pref = "RT min") -->
-<!-- ## shinyscreen::rt_input(input_rt = "plot_rt_max", -->
-<!-- ##                       input_unit = "plot_rt_max_unit", -->
-<!-- ##                       width=15, -->
-<!-- ##                       width_u=10, -->
-<!-- ##                       def_rt = "max", -->
-<!-- ##                       def_unit = "min", -->
-<!-- ##                       pref = "RT max") -->
-<!-- ## hr() -->
-<!-- ``` -->
-
-<!-- </div> <\!-- Control Bar -\-> -->
-
-<!-- </div> <\!-- Main -\-> -->
 
 
 
